--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>Todo web application example</title>
+    <title>Quiz App</title>
     <link rel="stylesheet" href="bootstrap.min.css" />
   </head>
   <body>
